fixing vert align

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,6 +87,7 @@ body {
   align-items: center;
   padding: 0 1.25vw;
   flex-grow: 1;
+  overflow: auto;
 }
 #nine-cycle-wrapper{
   width: 8vh;
